--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ branches:
 
 matrix: 
   include:
-    - name: "Component Unit Tests"
+    - name: "Unit Tests"
       node_js: "10.15.0"
-      env: TEST_FOLDER=Tests/ComponentTests
 
 script: npm test --watchAll=false
